@@ -23,7 +23,10 @@ if($sub!='Submit'){
 	else{$oldrid=-1;}
 	$RepDef=fetchReportDefinition($oldrid);
 
-	/* ...but can edit reports from previous years.*/
+
+/* Unlikely but Could be editting a report from a previous years, so
+   set the academic year.
+*/
 	if($oldrid!=-1){$curryear=$RepDef['Year']['value'];}
 
 three_buttonmenu();
@@ -103,6 +106,108 @@ three_buttonmenu();
 ?>
 			</div>
 	  </fieldset>
+
+<?php
+			}
+		else{
+			/**
+			 * This is a wrapper which binds the following subject reports
+			 * together.
+			 */
+?>
+	  <fieldset class="left">
+		<legend><?php print_string('subjectreports',$book);?></legend>
+<?php
+		$selrids=array();
+		while(list($repindex,$rep)=each($RepDef['reptable']['rep'])){
+			$selrids[]=$rep['id_db'];
+			}
+		include('scripts/list_report.php');
+?>
+	  </fieldset>
+
+<?php
+		/**
+		 * The rest covers the summary matter like signature boxes, form
+		 * and section level comments.
+		 */
+		$selsigs=array();
+		$selcoms=array();
+		while(list($sumindex,$catdef)=each($RepDef['summaries'])){
+			if($catdef['type']=='sig'){$selsigs[]=$catdef['id'];}
+			if($catdef['type']=='com'){$selcoms[]=$catdef['id'];}
+			}
+?>
+
+	  <fieldset class="right">
+		<legend><?php print_string('summarymatter',$book);?></legend>
+
+	  <div class="center">
+		<label for="Summary comments"><?php print_string('summarycomment',$book);?></label>
+		<select style="width:25em;" id="Summary comments" type="text" name="catdefids[]"
+			class="required" size="3" multiple="multiple" tabindex="<?php print $tab++;?>" >
+		<option 
+<?php
+			if(sizeof($selcoms)==0){print ' selected="selected" ';}
+?>
+			value="-100">
+			<?php print_string('none');?>
+		</option>
+<?php 
+			$d_categorydef=mysql_query("SELECT id, name, subject_id FROM
+			categorydef WHERE type='com' AND (course_id LIKE '$rcrid' 
+			OR course_id='%') ORDER BY rating");
+			while($catdef=mysql_fetch_array($d_categorydef,MYSQL_ASSOC)){
+?>
+		<option 
+				<?php if(in_array($catdef['id'], $selcoms)){print ' selected="selected" ';}?>
+				value="<?php print $catdef['id'];?>">
+					<?php print $catdef['name'];?>
+		</option>
+<?php
+				}
+?>
+		</select>
+	  </div>
+
+	  <div class="center">
+		<label for="Summary comments"><?php print_string('summarysignature',$book);?></label>
+		<select style="width:25em;" id="Summary signatures" type="text" name="catdefids[]"
+			class="required" size="3" multiple="multiple" tabindex="<?php print $tab++;?>" >
+		<option 
+<?php
+			if(sizeof($selsigs)==0){print ' selected="selected" ';}
+?>
+			value="-100">
+			<?php print_string('none');?>
+		</option>
+<?php
+		$d_categorydef=mysql_query("SELECT id, name, subject_id FROM
+			categorydef WHERE type='sig' AND (course_id LIKE '$rcrid' 
+			OR course_id='%') ORDER BY rating;");
+		while($catdef=mysql_fetch_array($d_categorydef,MYSQL_ASSOC)){
+
+?>
+		<option 
+<?php
+		if(in_array($catdef['id'], $selsigs)){print ' selected="selected" ';}
+?>
+		value="<?php print $catdef['id'];?>">
+			<?php print $catdef['name'];?>
+		</option>
+<?php
+			}
+?>
+		</select>
+		</div>
+	  </fieldset>
+
+<?php
+			}
+?>
+
+
+
 	  <fieldset class="right">
 		<legend><?php print_string('ratingboxes',$book);?></legend>
 <?php
@@ -114,9 +219,9 @@ three_buttonmenu();
 			include('scripts/list_rating_name.php');
 ?>
 	  </fieldset>
-
-
-
+<?php
+		if($rcrid!=''){
+?>
 	  <fieldset class="left">
 		<legend><?php print_string('assessmentprofile',$book);?></legend>
 <?php 
@@ -131,95 +236,8 @@ three_buttonmenu();
 
 <?php
    		}
-   	else{
-		/**
-		 * This is a wrapper which binds the following subject reports
-		 * together.
-		 */
-?>
-	  <fieldset class="center">
-		<legend><?php print_string('subjectreports',$book);?></legend>
-<?php
-		$selrids=array();
-		while(list($repindex,$rep)=each($RepDef['reptable']['rep'])){
-			$selrids[]=$rep['id_db'];
-			}
-		include('scripts/list_report.php');
-?>
-	  </fieldset>
-
-<?php
-		/**
-		 * The rest covers the summary matter like signature boxes, form
-		 * and section level comments and attendance.
-		 */
-		$selcatids=array();
-		while(list($sumindex,$catdef)=each($RepDef['summaries'])){
-			$selcatids[]=$catdef['id'];
-			}
 ?>
 
-	  <fieldset class="center">
-		<legend><?php print_string('summarymatter',$book);?></legend>
-
-	  <div class="left">
-		<label for="Summary comments"><?php print_string('summarycomment',$book);?></label>
-		<select style="width:25em;" id="Summary comments" type="text" name="catdefids[]"
-			class="required" size="3" multiple="multiple" tabindex="<?php print $tab++;?>" >
-		<option 
-<?php
-		if(sizeof($selcatids)==0){print ' selected="selected" ';}
-?>
-			value="-100">
-			<?php print_string('none');?>
-		</option>
-<?php 
-		$d_categorydef=mysql_query("SELECT id, name, subject_id FROM
-			categorydef WHERE type='com' AND (course_id LIKE '$rcrid' 
-			OR course_id='%') ORDER BY rating");
-		while($catdef=mysql_fetch_array($d_categorydef,MYSQL_ASSOC)){
-?>
-		<option 
-			<?php if(in_array($catdef['id'], $selcatids)){print ' selected="selected" ';}?>
-			value="<?php print $catdef['id'];?>">
-				<?php print $catdef['name'];?>
-		</option>
-<?php
-		   	}
-?>
-		</select>
-	  </div>
-
-	  <div class="right">
-		<label for="Summary comments"><?php print_string('summarysignature',$book);?></label>
-		<select style="width:25em;" id="Summary signatures" type="text" name="catdefids[]"
-			class="required" size="3" multiple="multiple" tabindex="<?php print $tab++;?>" >
-		<option value="-100">
-			<?php print_string('none');?>
-		</option>
-<?php 
-		$d_categorydef=mysql_query("SELECT id, name, subject_id FROM
-			categorydef WHERE type='sig' AND (course_id LIKE '$rcrid' 
-			OR course_id='%') ORDER BY rating;");
-		while($catdef=mysql_fetch_array($d_categorydef,MYSQL_ASSOC)){
-?>
-		<option 
-<?php
-		if(in_array($catdef['id'], $selcatids)){print ' selected="selected" ';}
-?>
-		value="<?php print $catdef['id'];?>">
-			<?php print $catdef['name'];?>
-		</option>
-<?php
-			}
-?>
-		</select>
-		</div>
-	  </fieldset>
-
-<?php
-		}
-?>
 
 	  <fieldset class="center">
 		<legend><?php print_string('nameoftemplate',$book);?></legend>
@@ -260,9 +278,12 @@ elseif($sub=='Submit'){
 	$deadline=$_POST['deadline'];
 	$transform=$_POST['template'];
 	if(isset($_POST['style'])){$style=$_POST['style'];}else{$style='portrait';}
+	if(isset($_POST['addcategory0'])){$addcategory=$_POST['addcategory0'];}
+	if(isset($_POST['ratingname'])){$ratingname=$_POST['ratingname'];}
 
 	mysql_query("UPDATE report SET title='$title',date='$date', deadline='$deadline',  
-				style='$style', transform='$transform' WHERE id='$rid';");
+				style='$style', transform='$transform',
+				addcategory='$addcategory', rating_name='$ratingname'  WHERE id='$rid';");
 
 	if($crid!='wrapper'){
 		/*** This is a subject report ****/
@@ -270,8 +291,6 @@ elseif($sub=='Submit'){
 		$compstatus=$_POST['componentstatus'];
 		$stage=$_POST['stage'];
 		$reptype=$_POST['reptype0'];
-		$addcategory=$_POST['addcategory0'];
-		if(isset($_POST['ratingname'])){$ratingname=$_POST['ratingname'];}
 		$commentcomp=$_POST['commentcomp0'];
 		if(isset($_POST['commentlength'])){$commentlength=$_POST['commentlength'];}
 		else{$commentlength='0';}
@@ -289,7 +308,8 @@ elseif($sub=='Submit'){
 			mysql_query("INSERT INTO rideid (report_id, assessment_id) VALUES ('$rid','$eid');");
 			}
 
-		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid';");
+		/* The categories stored in ridcatid with subject_id set to bid or %. */
+		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid' AND subject_id!='profile' AND subject_id!='summary' AND subject_id!='wrapper';");
 		if($addcategory=='yes'){
 			$d_catdef=mysql_query("SELECT id, subject_id FROM categorydef WHERE
 						type='cat' AND (course_id='%' OR course_id='$crid');");
@@ -300,6 +320,8 @@ elseif($sub=='Submit'){
 					   categorydef_id, subject_id) VALUES ('$rid', '$catid', '$catbid')");
 				}
 			}
+
+		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid' AND subject_id='profile';");
 		if(isset($profid) and $profid!=''){
 			mysql_query("INSERT INTO ridcatid (report_id,categorydef_id,subject_id)
 							 VALUES ('$rid', '$profid', 'profile');");
@@ -309,8 +331,8 @@ elseif($sub=='Submit'){
 		/*** This is a wrapper for subject reports. ***/
 
 		/* Summary matter goes into ridcatid with subject_id='summary'. */
-		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid' 
-						AND subject_id='summary';");
+		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid'
+							AND subject_id='summary';");
 		$catdefids=(array)$_POST['catdefids'];
 		while(list($index,$catid)=each($catdefids)){
 			if($catid!='-100'){
@@ -320,7 +342,7 @@ elseif($sub=='Submit'){
 				}
 			}
 
-		/*wrapper report goes into ridcatid with subject_id='wrapper'*/
+		/* Wrapper report goes into ridcatid with subject_id='wrapper'*/
 		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid' 
 						AND subject_id='wrapper';");
 		$rids=(array)$_POST['rids'];
@@ -329,6 +351,20 @@ elseif($sub=='Submit'){
 							categorydef_id, subject_id) VALUES
 							('$rid', '$wraprid', 'wrapper')");
 			}
+
+		/* The summary categories stored in ridcatid with subject_id set to form, year or section. */
+		mysql_query("DELETE FROM ridcatid WHERE report_id='$rid' AND subject_id!='profile' AND subject_id!='summary' AND subject_id!='wrapper';");
+		if($addcategory=='yes'){
+			$d_catdef=mysql_query("SELECT id, subject_id FROM categorydef WHERE
+						type='cat' AND (subject_id='form' OR subject_id='year' OR subject_id='section');");
+			while($d_catid=mysql_fetch_array($d_catdef,MYSQL_NUM)){
+				$catid=$d_catid[0];
+				$catbid=$d_catid[1];
+				mysql_query("INSERT INTO ridcatid (report_id,
+					   categorydef_id, subject_id) VALUES ('$rid', '$catid', '$catbid')");
+				}
+			}
+
 		}
 	}
 
