@@ -12,8 +12,10 @@ Included some crude postcode analysis to the statistics page in admin.
 New day-by-day break down of the attendnace statistics.
 
 Experimenting with new comment writer which does categories and
-comments. Only applied to summary comments so far.
+comments. Only applied to summary comments so far as newcomment_writer.
 
+Added category option to editing report wrappers. Fixed bug with
+wrapper form for slection boxes.
 
 
 Version ClaSS-0.9.20 release (2010/5/12)
